# advent-of-fpga

2025/: .gitignore  dune-project  readme.md
2025/src/: day1.ml  dune
2025/test/: day1_test.ml  dune
