(lang dune 3.20)

(name fpga-2025)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Emma Tomlinson <t97emma@gmail.com>")

(package
 (name fpga-2025)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
